[package]
name = "crataegus"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135" # maybe no longer necessary
serde_urlencoded = "0.7.1"
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.6"
color-eyre = "0.6.3"
toml = "0.8.19"
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
axum-auth = { version = "0.8.1", features = ["auth-basic"] }

# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

