[package]
name = "crataegus"
version = "0.0.2"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.26", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.6"
color-eyre = "0.6.3"
toml = "0.8.19"
sea-orm = { version = "1.1.4", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
axum-auth = { version = "0.8.1", features = ["auth-basic"] }
inquire = "0.7.5"
futures = "0.3.31"
chrono-english = "0.1.7"
futures-util = "0.3.31"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls = { version = "0.23.21", features = ["ring"] }
csv = "1.3.1"
kamadak-exif = "0.6.1"
tzf-rs = "0.4.9"
chrono-tz = "0.10.1"
# fork of proj crate with 3d support enabled
proj = { git = "https://github.com/ozymandium/proj", branch = "main", version = "0.28.0", features = ["bundled_proj", "network", "pkg_config", "ureq"] }

[dev-dependencies]
tempfile = "3.15.0"
serde_urlencoded = "0.7.1"
pretty_assertions = "1.4.1"
approx = "0.5.1"

